--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -17,12 +17,18 @@
     <h3>...</h3>
     
     <!--<input id="green_button" type="button" class="btn btn-primary" value="Click to add a new element" onclick="new_element();" />-->
-    <input id="green_button" type="button" class="btn btn-primary" value="Click to add a new element"  />
+    <input id="dar_click" type="button" class="btn btn-primary" value="Click to add a new element"  />
 
+    <ul id="lista_fruta"></ul>
+    <ul id="log_usuario"></ul>
+
+
+    <input id="dar_click_usuarios" type="button" class="btn btn-success" value="Obtener usuarios"  />
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   
